--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,18 @@
 </h1>
 
 {% if user.is_authenticated %}
+{{ user.username }}
+<a href="{% url 'logout' %}">Déconnexion</a>
+{% else %}
+<a href="{% url 'login' %}">Connexion</a>
 <a href="{% url 'signup' %}">S'inscrire</a>
+{% endif %}
+
+{% if user.cart %}
+<p>
+    <a href="{% url 'cart' %}">Voir ton pannier ({{ user.cart.orders.count }})</a>
+</p>
+
 {% endif %}
 {% block content %}
 
