--- a/templates/base.html
+++ b/templates/base.html
@@ -1,30 +1,165 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>La boutique de Leicanor1</title>
+    <title>La boutique de L'artiste</title>
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
+    <style>
+    *{
+        margin: 0;
+        padding: 0;
+        list-style: none;
+        text-decoration: none;
+        font-family:"Google Sans Regular";
+        box-sizing: border-box;
+    }
+
+    body{
+        background: #fefefe;
+    }
+
+    header{
+        width:100%;
+        height: 80px;
+        background:#11101b;
+        display:flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 0 100px;
+    }
+
+    .logo a{
+        font-size:28px;
+        font-weight:bold;
+        color:#fefefe;
+    }
+    .hamburger{
+        display:none;
+    }
+    .nav-bar ul{
+        display:flex;
+    }
+    .nav-bar ul li a{
+        display:block;
+        color:#fefefe;
+        font-size:20px;
+        padding:10px 25px;
+        border-radius:50px;
+        transition:0.2px;
+        margin:0 5px;
+    }
+
+    .nav-bar ul li :hover{
+        color:#11101b;
+        background:#fefefe;
+    }
+    .nav-bar ul li a:active{
+        color:#11101b;
+        background:#fefefe;
+    }
+
+    @media only screen and (max-width:1320px){
+        header{
+            padding:0 50px;
+        }
+    }
+    @media only screen and (max-width:1100px){
+        header{
+            padding:0 30px;
+        }
+    }
+    @media only screen and (max-width:900px){
+        .hamburger{
+            display:block;
+            cursor:pointer;
+        }
+        .hamburger .line{
+            width:30px;
+            height:3px;
+            background:#fefefe;
+            margin:6px 0;
+        }
+        .nav-bar{
+            height:0;
+            position:absolute;
+            top:80px;
+            left:0;
+            right:0;
+            width:100vw;
+            background:#11101b;
+            transition:0.2s;
+            overflow:hidden;
+        }
+        .nav-bar.active{
+            height:450px;
+         }
+        .nav-bar ul{
+            display:block;
+            width:fit-content;
+            margin:80px auto 0 auto;
+            text-align:center;
+            transition:0.5s;
+            opacity:0;
+        }
+        .nav-bar.active ul{
+            opacity:1;
+        }
+        .nav-bar ul li a{
+            margin-bottom:12px;
+        }
+
+    }
+    </style>
 </head>
 <body>
-<h1>
-    <a href="{% url 'index'%}">La boutique de Leicanor</a>
-</h1>
-
-{% if user.is_authenticated %}
-{{ user.username }}
-<a href="{% url 'logout' %}">Déconnexion</a>
-{% else %}
-<a href="{% url 'login' %}">Connexion</a>
-<a href="{% url 'signup' %}">S'inscrire</a>
-{% endif %}
-
-{% if user.cart %}
-<p>
-    <a href="{% url 'cart' %}">Voir ton pannier ({{ user.cart.orders.count }})</a>
-</p>
-
-{% endif %}
+<header>
+    <div class="logo"><a href="{% url 'index'%}">E-commerce</a></div>
+    <div class="hamburger">
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+    </div>
+    <nav class="nav-bar">
+        <ul>
+            <li>
+                <a href="" class="active">Home</a>
+            </li>
+            <li>
+                <a href="">Chat(1)</a>
+            </li>
+            {% if user.is_authenticated %}
+            <li>
+                <a href="{% url 'logout' %}">Déconnexion</a>
+            </li>
+            {% if user.cart %}
+                <li>
+                    <a href="{% url 'cart' %}">Pannier ({{ user.cart.orders.count }})</a>
+                </li>
+            {% endif %}
+            {% else %}
+            <li>
+                <a href="{% url 'login' %}">Login</a>
+            </li>
+            <li>
+                <a href="{% url 'signup' %}">Signup</a>
+            </li>
+            {% endif %}
+            <li>
+                <a href="">{{ user.username }}</a>
+            </li>
+        </ul>
+    </nav>
+</header>
 {% block content %}
 
 {% endblock %}
+<script>
+    hamburger=document.querySelector(".hamburger");
+    hamburger.onclick=function(){
+        navbar=document.querySelector(".nav-bar");
+        navbar.classList.toggle("active");
+    }
+</script>
 </body>
 </html>
