--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -1,16 +1,23 @@
 {% extends 'base.html' %}
 {% block content %}
-    <h1>S'inscrire</h1>
-    <form action="" method="POST">
+<div class="center">
+    <h1>Inscription</h1>
+    <form method="POST">
         {% csrf_token %}
-        <p>
-            <label for="username">Nom d'utilisateur</label>
-            <input type="text" id="username" name="username">
-        </p>
-        <p>
-            <label for="password">Mot de passe</label>
-            <input type="password" id="password" name="password">
-        </p>
-        <button type="submit">S'inscrire</button>
+        <div class="txt_field">
+            <input type="text" id="username" name="username" required>
+            <span></span>
+            <label for="username">Username</label>
+        </div>
+         <div class="txt_field">
+            <input type="password" id="password" name="password" required>
+             <span></span>
+            <label for="password">Password</label>
+        </div>
+        <input type="submit" value="Sign up">
+        <div class="signup_link">
+            Already a member? <a href="{% url 'login' %}">Login</a>
+        </div>
     </form>
+</div>
 {% endblock %}
