--- a/ecommerce/templates/ecommerce/detail.html
+++ b/ecommerce/templates/ecommerce/detail.html
@@ -1,17 +1,17 @@
 {% extends 'base.html' %}
 
 {% block content %}
-
-<h2>{{ product.name }}</h2>
-<h3>{{ product.price }}£</h3>
-<img src="{{ product.thumbail.url }}" alt=" {{ product.name }}"style="height:150px;width:150px;">
-<p>{{ product.description }}</p>
-<p>{{ product.stock }}</p>
-{% if user.is_authenticated %}
-<p>
-    <a href="{% url 'add-to-cart' product.slug %}">
-        Ajouter l'article dans le pannier
-    </a>
-</p>
-{% endif %}
+ <div class="card">
+  <img src="{{ product.thumbail.url }}" alt="{{ product.name }}" style="width:100%;height:400px;border-radius:10px;">
+  <h2>{{ product.name }}</h2>
+  <p class="price">{{ product.price }} Euro</p>
+  <p>{{ product.description }}</p>
+  <p class="pp">({{ product.stock }}) Stockée</p>
+  {% if user.is_authenticated %}
+  <p>
+      <button><a href="{% url 'add-to-cart' product.slug %}">Add to Cart</a></button>
+  </p>
+ {% endif %}
+</div>
 {% endblock %}
+
